[package]
name = "routinator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dependencies.routinator]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "command_line"
path = "fuzz_targets/command_line.rs"
test = false
doc = false
